tests/good/1.nx
// is this a comment?

print(let x : int = 12 in x + 54);